--- a/app/globals.css
+++ b/app/globals.css
@@ -75,7 +75,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-slate-800 text-foreground text-white;
+    @apply bg-black text-foreground text-white;
     font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
